--- a/QualityEdQ1/src/main/resources/static/index.html
+++ b/QualityEdQ1/src/main/resources/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>hello</title>
+  <meta charset="utf-8">
+     <title>Girls Empowerment Home</title>
+     <meta name="description" content ="Creating a webpage where girls and women connect through research "<link rel="stylesheet" href="empowerment.css">
 </head>
 <body<div class="wrapper">
         <header>
