--- a/QualityEdQ1/src/main/resources/static/index.html
+++ b/QualityEdQ1/src/main/resources/static/index.html
@@ -17,8 +17,8 @@
                 <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Bobcats.html">Bobcats</a></li>
-                        <li><a href="Dolphins.html">Dolphins</a></li>
-                        <li><a href="Pelicant.html">Pelicant</a></li>
+                        <li><a href="Turtles.html">Dolphins</a></li>
+                        <li><a href="Pelicans.html">Pelicans</a></li>
                 </ul>
 				
         </nav>
