--- a/QualityEdQ1/src/main/resources/static/pelicans.html
+++ b/QualityEdQ1/src/main/resources/static/pelicans.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
      <title>Girls Empowerment Home</title>
-     <meta name="description" content ="Creating a webpage where girls and women connect through research "/> <link rel="stylesheet" href="empowerment.css">
+     <meta name="description" content ="Creating a webpage where children and adults n connect through research "/> <link rel="stylesheet" href="empowerment.css">
 </head>
 <body>
 <div class="wrapper">
