--- a/QualityEdQ1/src/main/resources/static/index.html
+++ b/QualityEdQ1/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
             <div class ="header_container">     
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQNs2j1NIDV_Uv15qfViBA5BTKlejiSsBCk0SkqFDpYPPRqdyE" height="200" width="200">  
                 <h1>The Community Project</h1>
-             <h2>Women Empowering Girls  to be Successful</h2>
+             <h2>Women Empowering Students to be Successful</h2>
             </div>
         </header>
         <nav>
