--- a/QualityEdQ1/src/main/resources/static/Bobcats.html
+++ b/QualityEdQ1/src/main/resources/static/Bobcats.html
@@ -16,7 +16,7 @@
         </header>
         <nav>
                 <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="Bobcats.html">Bobcats</a></li>
                         <li><a href="Turtles.html">Turtles</a></li>
                         <li><a href="Pelicans.html">Pelicans</a></li>
@@ -26,7 +26,7 @@
 				
         </nav>
         <section class="content">
-                <h1>Kiawah Island Bobcats</h2>
+                <h2>Kiawah Island Bobcats</h2>
 				<img src="https://nationalzoo.si.edu/sites/default/files/styles/480x240_scale_and_crop/public/animals/bobcat_1.jpg?itok=M1-5g7Fl" heignt="100" weight="100"/>
                 <blockquote>
 				
