--- a/QualityEdQ1/src/main/resources/static/home.html
+++ b/QualityEdQ1/src/main/resources/static/home.html
@@ -5,7 +5,8 @@
      <title>Girls Empowerment Home</title>
      <meta name="description" content ="Creating a webpage where girls and women connect through research "/> <link rel="stylesheet" href="empowerment.css">
 </head>
-<body<div class="wrapper">
+<body>
+    <div class="wrapper">
         <header>
             <div class ="header_container">     
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQNs2j1NIDV_Uv15qfViBA5BTKlejiSsBCk0SkqFDpYPPRqdyE" height="200" width="200">  
@@ -15,7 +16,7 @@
         </header>
         <nav>
                 <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="Bobcats.html">Bobcats</a></li>
                         <li><a href="Turtles.html">Turtles</a></li>
                         <li><a href="Pelicans.html">Pelicans</a></li>
@@ -25,7 +26,7 @@
 				
         </nav>
         <section class="content">
-                <h1>Welcome</h2>
+                <h2>Welcome</h2>
                 <blockquote>
                        The Community Project is an application that bridges the gap for young girls to boost their confidence level in education toward better self-esteem in male-dominated industries through the support of their community.  This APP fulfills all components of Science, Technology, Engineering, Arts and Mathematics according to the UN Goals of 2030. In serving and supporting young girls within our community, we strive to replicate the model of understanding at an early age between the foundations of life skills to break the glass ceiling.  These changes are to share ideas, innovations and jobs within reach in our own State of South Carolina.      
                 </blockquote>
@@ -36,7 +37,7 @@
               
         </footer>
 		
-</div>
+    </div>
 
 </body>
 </html>
