--- a/QualityEdQ1/src/main/resources/static/success.html
+++ b/QualityEdQ1/src/main/resources/static/success.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Student Added</h1>
-    <a href="index.html">Return to Home Page</a>
+    <a href="home.html">Return to Home Page</a>
 </body>
 </html>
