--- a/QualityEdQ1/src/main/resources/static/turtles.html
+++ b/QualityEdQ1/src/main/resources/static/turtles.html
@@ -16,7 +16,7 @@
         </header>
         <nav>
                 <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="Bobcats.html">Bobcats</a></li>
                         <li><a href="Turtles.html">Turtles</a></li>
                         <li><a href="Pelicans.html">Pelicans</a></li>
